フォントの変更

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 検索結果でタイトルの下に表示される -->
     <meta name="description" content="「人生は積み木」日々そう思うのである。良いことも悪いことも積み重ねである。">
     <!-- OGPの設定 -->
-    <meta property="og:url" content="https://jolhely1.github.io/MYCV/?fbclid=IwAR2L4LFudBg0Dmteu6ZG1sZ1IHNQmZGsxyEAl1QVCr6W6JhjHnWKXvebjqg" />
+    <meta property="og:url" content="https://jolhely1.github.io/buildyourbricks/?fbclid=IwAR0bC9It78Cts7EeXxiCtjIIJSubehBl_J4HsetaM79Bg7gK7ayVuxKjcts" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="人生は積み木だよ" />
     <meta property="og:description" content="「人生は積み木」日々そう思うのである。良いことも悪いことも積み重ねである"/>
@@ -28,8 +28,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/destyle.css">
     <!-- GoogleFonts読み込み -->
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet"> -->
 
     <!-- Fontawesome読み込み -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
