OGPのサムネイル、favicon変更

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <meta property="og:title" content="人生は積み木だよ" />
     <meta property="og:description" content="「人生は積み木」日々そう思うのである。良いことも悪いことも積み重ねである"/>
     <meta property="og:site_name" content="人生は積み木" />
-    <meta property="og:image" content="image/OGP's TN.png" />
+    <meta property="og:image" content="image/thumbnail.png" />
     <!-- ファビコンの設定 -->
-    <link rel="icon" href="image/favicon.png"　type="image/png">
+    <link rel="icon" href="image/icon.png"　type="image/png">
     <!-- アプリのアイコン -->
-    <link rel="apple-touch-icon" href="image/favicon.png">
+    <link rel="apple-touch-icon" href="image/icon.png">
     <!-- IEを互換モードで使用していても、最新のバージョンで表示させるためのコード。 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- CSSの読み込み -->
