--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- ファビコンの設定 -->
     <link rel="icon" href="image/icon.png"　type="image/png">
     <!-- アプリのアイコン -->
-    <link rel="apple-touch-icon" href="image/icon.png">
+    <link rel="apple-touch-icon" href="image/favicon.png">
     <!-- IEを互換モードで使用していても、最新のバージョンで表示させるためのコード。 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- CSSの読み込み -->
