--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
         <p class="text">料理については、レパートリーや食材への知識、そして調理の経験は沢山失敗して増やしていこうと思っています。</p>
         
-        <p class="text">いつかは、「今日は何？」と期待してもらえるようなそんな料理が作れるようになりたいです。</p>
+        <p class="text">いつかは、「今日は何作ってくれるの？」と期待してもらえるようなそんな料理が作れるようになりたいです。（むふふ…）</p>
   
       </div>
 
@@ -116,7 +116,10 @@
         <div class="fifteen"><img src="image\p15.jpg" alt=""></div>
         <div class="sixteen"><img src="image\p16.jpg" alt=""></div>
       </div>
+      <p class="last-message">最後までお読みいただきありがとうございました。<br>いつもお世話になっているお礼に、次回お会いする際、<br>これを読んだよとお伝えいただければ餃子の王将にて餃子とホイコーロー定食おごります。
+      </p>
     </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.1.0/jquery-migrate.min.js"></script>
