--- a/index.html
+++ b/index.html
@@ -116,8 +116,12 @@
         <div class="fifteen"><img src="image\p15.jpg" alt=""></div>
         <div class="sixteen"><img src="image\p16.jpg" alt=""></div>
       </div>
-      <p class="last-message">最後までお読みいただきありがとうございました。<br>いつもお世話になっているお礼に、次回お会いする際、<br>これを読んだよとお伝えいただければ餃子の王将にて餃子とホイコーロー定食おごります。
-      </p>
+      <div class="last-message"><p>最後までお読みいただきありがとうございました。</p>
+        <p>いつもお世話になっているお礼に、次回お会いする際、<br>これを読んだよとお伝えいただければ餃子の王将にて餃子とホイコーロー定食おごります。
+        </p>
+        <p>それでは～</p>
+      </div>
+      
     </div>
 
 
